--- a/css/general.css
+++ b/css/general.css
@@ -1,9 +1,14 @@
-.container {
-    width: auto;
-    max-width: 680px;
-    padding: 0 15px;
-}
-
 .footer {
     background-color: #f5f5f5;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+}
+
+a {
+    font-size: 3em;
+    color: black !important;
+    text-decoration: none;
 }
