--- a/css/general.css
+++ b/css/general.css
@@ -12,3 +12,36 @@ a {
     color: black !important;
     text-decoration: none;
 }
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+#data1 {
+    opacity: 0;
+    animation-fill-mode: both;
+    animation-name: fadeIn;
+    animation-duration: 2s;
+}
+
+#data2 {
+    opacity: 0;
+    animation-fill-mode: both;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+    animation-delay: 0.5s;
+}
+
+#data3 {
+    opacity: 0;
+    animation-fill-mode: both;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+    animation-delay: 1s;
+}
