--- a/css/general.css
+++ b/css/general.css
@@ -23,25 +23,47 @@ a {
     }
 }
 
-#data1 {
+.fadein {
     opacity: 0;
     animation-fill-mode: both;
     animation-name: fadeIn;
+}
+
+.aduration-1 {
+    animation-duration: 1s;
+}
+
+.aduration-2 {
     animation-duration: 2s;
 }
 
-#data2 {
-    opacity: 0;
-    animation-fill-mode: both;
-    animation-name: fadeIn;
-    animation-duration: 1s;
+.adelay-05 {
     animation-delay: 0.5s;
 }
 
-#data3 {
-    opacity: 0;
-    animation-fill-mode: both;
-    animation-name: fadeIn;
-    animation-duration: 1s;
+.adelay-06 {
+    animation-delay: 0.6s;
+}
+
+.adelay-07 {
+    animation-delay: 0.7s;
+}
+.adelay-09 {
+    animation-delay: 0.9s;
+}
+
+.adelay-1 {
     animation-delay: 1s;
+}
+
+.adelay-2 {
+    animation-delay: 2s;
+}
+
+.adelay-3 {
+    animation-delay: 3s;
+}
+
+.adelay-4 {
+    animation-delay: 4s;
 }
